--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,14 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="lista_de_razas">Lista de razas</string>
+    <string name="imagenes">IMAGENES</string>
+    <string name="elige_tu_favorito">Elige tu favorito</string>
+    <string name="favoritos">FAVORITOS</string>
+    <string name="textview">TextView</string>
+    <string name="razas_de_perritos">Razas de Perritos</string>
+    <string name="view_favorites">VIEW FAVORITES</string>
+    <string name="mis_perros_favoritos">MIS PERROS FAVORITOS</string>
+    <string name="textview">TextView</string>
+    <string name="textview">TextView</string>
+    <string name="textview">TextView</string>
 </resources>
