--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="razas_de_perritos">Razas de Perritos</string>
     <string name="view_favorites">VIEW FAVORITES</string>
     <string name="mis_perros_favoritos">MIS PERROS FAVORITOS</string>
+    <string name="manten_presionada_la_imagen_para_seleccionar_tu_favorito">Manten presionada la imagen para seleccionar tu favorito</string>
+    <string name="elige_tu_perro_favorito">Elige tu Perro Favorito</string>
 
 </resources>
